# parthsolanke

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: build.yaml
utils/: config.py  github_stats.py  svg_manager.py  uptime_calculator.py
